--- a/templates/error.html
+++ b/templates/error.html
@@ -1,8 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="form-container text-center">
-  <h3 class="text-danger mb-4">Erreur</h3>
-  <p>{{ message }}</p>
-  <a href="/" class="btn btn-outline-primary mt-3">Retour</a>
+<div
+  class="bg-white rounded-lg shadow-lg p-8 mt-20 text-center flex flex-col items-center justify-center space-y-6 max-w-xl mx-auto">
+  <h3 class="text-3xl font-bold text-red-600">Erreur</h3>
+  <p class="text-gray-700">{{ message }}</p>
+  <a href="/"
+    class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 px-6 rounded transition-colors duration-200">
+    Retour
+  </a>
 </div>
 {% endblock %}
